crates/parser/src/snapshots/parser__tests__parse_true_literal.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
functions:
  - name:
      name: main
      location:
        start: 3
        end: 7
        context: ~
    parameters:
      parameters: []
      location:
        start: 8
        end: 8
        context: ~
    return_type:
      kind: Bool
      location:
        start: 13
        end: 17
        context: ~
    body:
      statements:
        statements:
          - Expression:
              BooleanLiteral:
                value: true
                location:
                  start: 24
                  end: 28
                  context: ~
        location:
          start: 24
          end: 28
          context: ~
      location:
        start: 24
        end: 28
        context: ~
    location:
      start: 0
      end: 30
      context: ~
