crates/parser/src/snapshots/parser__tests__statement_returns_expression_statement.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
ExpressionStatement:
  expression:
    Identifier:
      name: x
      location:
        start:
          index: 0
          line: 1
          column: 1
        end:
          index: 1
          line: 1
          column: 2
  location:
    start:
      index: 0
      line: 1
      column: 1
    end:
      index: 2
      line: 1
      column: 3
