crates/parser/src/snapshots/parser__tests__statement_returns_if_statement.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
IfStatement:
  condition:
    Identifier:
      name: condition
      location:
        start:
          index: 3
          line: 1
          column: 4
        end:
          index: 12
          line: 1
          column: 13
  then_block:
    statements:
      statements:
        - ExpressionStatement:
            expression:
              IntegerLiteral:
                value: "1"
                location:
                  start:
                    index: 15
                    line: 1
                    column: 16
                  end:
                    index: 16
                    line: 1
                    column: 17
            location:
              start:
                index: 15
                line: 1
                column: 16
              end:
                index: 17
                line: 1
                column: 18
      location:
        start:
          index: 13
          line: 1
          column: 14
        end:
          index: 19
          line: 1
          column: 20
    location:
      start:
        index: 13
        line: 1
        column: 14
      end:
        index: 19
        line: 1
        column: 20
  else_block:
    statements:
      statements:
        - ExpressionStatement:
            expression:
              IntegerLiteral:
                value: "0"
                location:
                  start:
                    index: 27
                    line: 1
                    column: 28
                  end:
                    index: 28
                    line: 1
                    column: 29
            location:
              start:
                index: 27
                line: 1
                column: 28
              end:
                index: 29
                line: 1
                column: 30
      location:
        start:
          index: 25
          line: 1
          column: 26
        end:
          index: 31
          line: 1
          column: 32
    location:
      start:
        index: 25
        line: 1
        column: 26
      end:
        index: 31
        line: 1
        column: 32
  location:
    start:
      index: 0
      line: 1
      column: 1
    end:
      index: 31
      line: 1
      column: 32
